--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>alibaba-dingtalk-service-sdk</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,6 +62,17 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>3.1.0</version>
+<!--			<exclusions>-->
+<!--				<exclusion>-->
+<!--					<artifactId>poi-ooxml-schemas</artifactId>-->
+<!--					<groupId>org.apache.poi</groupId>-->
+<!--				</exclusion>-->
+<!--			</exclusions>-->
+		</dependency>
     </dependencies>
 
 	<build>
